--- a/todo.txt
+++ b/todo.txt
@@ -3,3 +3,6 @@ Graphic display of notes playing
 Change instrument
 Comments
 Change scale in program
+Change pitch/octave offset in program
+Different keyboard setups
+Move to different frontend lib
